Finish class=foot

--- a/SMASH.html
+++ b/SMASH.html
@@ -509,7 +509,9 @@
                         Hugo Giraudel shares a great
                     </div>
                     <div class="text3">
-                        november 27, 2020 — Hugo Giraudel shares a great Hansa summarized <a href="#">write-up</a> in Chrome DevTools. Helpful for scaffolding out code which would otherwise reduced data usage, reduced transparency, or basically anything else in React with React hooks.
+                        november 27, 2020 — Hugo Giraudel shares a great Hansa summarized <a href="#">write-up</a> in
+                        Chrome DevTools. Helpful for scaffolding out code which would otherwise reduced data usage,
+                        reduced transparency, or basically anything else in React with React hooks.
                     </div>
                 </div>
             </div>
@@ -526,7 +528,9 @@
                         Operator Lookup
                     </div>
                     <div class="text3">
-                        november 27, 2020 — Do you need to look up a JavaScript operator? Josh W. Comeau’s <a href="#">Operator Lookup</a> in Chrome DevTools. Helpful for scaffolding out code which would otherwise is here to help: Enter an operator to get a concise summary of what it does.
+                        november 27, 2020 — Do you need to look up a JavaScript operator? Josh W. Comeau’s <a
+                            href="#">Operator Lookup</a> in Chrome DevTools. Helpful for scaffolding out code which
+                        would otherwise is here to help: Enter an operator to get a concise summary of what it does.
                     </div>
                 </div>
             </div>
@@ -543,7 +547,9 @@
                         JavaScript Interview Questions
                     </div>
                     <div class="text3">
-                        november 27, 2020 — A good start to check where you stand in terms of JavaScript: Mark Abeto compiled  <a href="#">70 JavaScript interview questions</a> in Chrome DevTools. Helpful for scaffolding out code which would otherwise for you to solve.
+                        november 27, 2020 — A good start to check where you stand in terms of JavaScript: Mark Abeto
+                        compiled <a href="#">70 JavaScript interview questions</a> in Chrome DevTools. Helpful for
+                        scaffolding out code which would otherwise for you to solve.
                     </div>
                 </div>
             </div>
@@ -560,7 +566,9 @@
                         Complete Guide To CSS Gradients
                     </div>
                     <div class="text3">
-                        november 27, 2020 — CSS allows you to control every aspect <a href="#">complete guide to CSS gradients</a> in Chrome DevTools. Helpful for scaffolding out code which would colors and how they transition from one to another
+                        november 27, 2020 — CSS allows you to control every aspect <a href="#">complete guide to CSS
+                            gradients</a> in Chrome DevTools. Helpful for scaffolding out code which would colors and
+                        how they transition from one to another
                     </div>
                 </div>
             </div>
@@ -577,7 +585,8 @@
                         Design Good Practices
                     </div>
                     <div class="text3">
-                        november 27, 2020 —  For his project “Design Good Practices” <a href="#">“Design Good Practices”</a> in Chrome DevTools. Helpful for scaffolding out code which would otherwise be
+                        november 27, 2020 — For his project “Design Good Practices” <a href="#">“Design Good
+                            Practices”</a> in Chrome DevTools. Helpful for scaffolding out code which would otherwise be
                         tedious to write.
                     </div>
                 </div>
@@ -586,7 +595,72 @@
         <div class="see">
             MORE LINKS ON TWITTER→
         </div>
+        <div class="foot">
+            <div class="foot1">
+                BROWSE ALL SMASHING MAGAZINE TOPICS
+            </div>
+            <div class="foot2">
+                <a href="#">Accessibility</a>
+                <a href="#">Android</a>
+                <a href="#">Animation</a>
+                <a href="#">Apps</a>
+                <a href="#">CSS</a>
+                <a href="#">Design</a>
+                <a href="#">Design Patterns</a>
+                <a href="#">Design Systems</a>
+                <a href="#">E-Commerce</a>
+                <a href="#">Freebies</a>
+                <a href="#">Graphics</a>
+                <a href="#">HTML</a>
+                <a href="#">Illustrator</a>
+                <a href="#">Inspiration</a>
+                <a href="#">iOS</a>
+                <a href="#">JavaScript</a>
+                <a href="#">Mobile</a>
+                <a href="#">Pattern Libraries</a>
+                <a href="#">Performance</a>
+                <a href="#">Photoshop</a>
+                <a href="#">Plugins</a>
+                <a href="#">React</a>
+                <a href="#">Responsive Web Design</a>
+                <a href="#">Service Workers</a>
+                <a href="#">Sketch</a>
+                <a href="#">Typography</a>
+                <a href="#">UI</a>
+                <a href="#">Usability</a>
+                <a href="#">User Experience</a>
+                <a href="#">Wallepapers</a>
+                <a href="#">Web Design</a>
+                <a href="#">WordPress</a>
+                <a href="#">Workflow</a>
+            </div>
+            <div class="foot3">
+                With a commitment to quality content for the design community.
+                Founded by Vitaly Friedman and Sven Lennartz. 2006–2020.
+                Smashing is proudly running on <a href="#">Netlify</a>.
+                Fonts by <a href="#">Latinotype</a>.
+            </div>
+            <div class="foot4">
+                <a href="#">✎ Write for us</a>
+                <a href="#">Contact us</a>
+                <a href="#">About us (Impressum)</a>
+                <a href="#">Privacy policy</a>
+                <a href="#">Membership login</a>
+                <a href="#">Delivery times</a>
+                <a href="#">Advertise</a>
+            </div>
+            <div class="foot-img1">
+                <img src="https://www.smashingmagazine.com/images/smashing-cat/cat-with-the-flower.svg" alt="">
+            </div>
+            <div class="foot-img2">
+                <img src="https://www.smashingmagazine.com/images/smashing-cat/cat-with-slippers.svg" alt="">
+            </div>
+            <div class="icon">
+                <i class="fas fa-chevron-up"></i>
+            </div>
+        </div>
     </div>
 </body>
 
 </html>
+
