rewrite class=smash

--- a/SMASH.html
+++ b/SMASH.html
@@ -14,7 +14,7 @@
     <div class="ctn">
         <header>
             <div class="head1">
-                <img class="smash" src="https://assets.stickpng.com/thumbs/58482e1fcef1014c0b5e4a66.png">
+                <img class="smash" src="https://www.smashingmagazine.com/images/logo/logo.svg  ">
             </div>
             <div class="head1 cat1">Articles</div>
             <div class="head1 cat2">Guides</div>
