--- a/SMASH.html
+++ b/SMASH.html
@@ -34,52 +34,56 @@
         <div class="negr">
             <div class="don">
                 <div class="dondon">
-                    <div class="don1">
-                        <a href="#">Daniel Don</a> wrote
-                    </div>
                     <div class="don-img">
                         <img src="https://cloud.netlifyusercontent.com/assets/344dbf88-fdf9-42bb-adb4-46f01eedd629/ed353cc5-6784-4a7e-ba6b-3fef3063ec83/valeriia-panina-200x200.jpg"
                             alt="">
-                        <span class="don-right">
-                            <a href="#">Reactive Variables In GraphQL Apollo Client</a>
-                        </span>
                     </div>
-                    <div class="don-bot">
-                        NOV 27, 2020 in <a href="#">React, JavaScript</a>
+                    <div class="right1">
+                        <div class="don1">
+                            <a href="#">Daniel Don</a> wrote
+                        </div>
+                        <div class="don-right">
+                            <a class="a1" href="#">Reactive Variables In GraphQL Apollo Client</a>
+                        </div>
+                        <div class="don-bot">
+                            NOV 27, 2020 in <a href="#">React, JavaScript</a>
+                        </div>
                     </div>
-                    <div class="par">Reactive variables work with GraphQL Apollo and offer you the same functionality
-                        with Redux or Context API without the complexity or extra layers that come with these other
-                        tools. A reactive variable in GraphQL Apollo is easy to use and doesn’t have as much setup
-                        process compared to Redux.
-                    </div>
+                </div>
+                <div class="par">Reactive variables work with GraphQL Apollo and offer you the same functionality
+                    with Redux or Context API without the complexity or extra layers that come with these other
+                    tools. A reactive variable in GraphQL Apollo is easy to use and doesn’t have as much setup
+                    process compared to Redux.
                 </div>
                 <div class="conti">
                     Cotinue reading<i class="fas fa-long-arrow-alt-right"></i>
                 </div>
                 <div class="valer">
-                    <div class="valer1">
-                        <a href="#">Valeria Panina</a>
-                        <span class="don-bot2">/NOV 27, 2020 in <a href="#">React, JavaScript</a></span>
-                    </div>
                     <div class="valer-img">
                         <img src="https://cloud.netlifyusercontent.com/assets/344dbf88-fdf9-42bb-adb4-46f01eedd629/60fa5fa8-c6aa-4076-9be0-52642f090607/daniel-don-200x200.jpg"
                             alt="">
-                        <span class="valer-right">
-                            <a href="#">Copy Docs: Make Your Microcopy Full Lorem ipsum dolor sit amet. And Consistent,
-                                And Maintain It</a>
-                        </span>
+                    </div>
+                    <div class="valer-right">
+                        <div class="vl1">
+                            <a class="a1" href="#">Daniel Don</a>
+                            /NOV 27,2020 in
+                            <a class="a2" href="#">React,JavaScript</a>
+                        </div>
+                        <a class="a3" href="#">Reactive Variebles in GraphQL Appolo Client</a>
                     </div>
                 </div>
                 <div class="valer">
-                    <div class="valer1">
-                        <a href="#">Jheny Tompkins</a>
-                        <span class="don-bot2">/NOV 27, 2020 in <a href="#">React, JavaScript</a></span>
-                    </div>
                     <div class="valer-img">
                         <img src="https://cloud.netlifyusercontent.com/assets/344dbf88-fdf9-42bb-adb4-46f01eedd629/84dfa22c-afec-4220-a11f-49fe185c7236/jhey-tompkins-200x200-opt.jpg"
                             alt="">
-                        <span class="valer-right">
-                            <a href="#">Playfulness In Code: Supercharge Your Learning By Having Fun</a>
+                    </div>
+                    <div class="valer-right">
+                        <div class="vl1">
+                            <a class="a1" href="#">Jheny Tompkins</a>
+                            /NOV 27, 2020 in
+                             <a class="a2" href="#">React, JavaScript</a>
+                        </div>
+                        <a class="a3" href="#">Playfulness In Code: Supercharge Your Learning By Having Fun</a>
                         </span>
                     </div>
                 </div>
@@ -600,40 +604,140 @@
                 BROWSE ALL SMASHING MAGAZINE TOPICS
             </div>
             <div class="foot2">
-                <a href="#">Accessibility</a>
-                <a href="#">Android</a>
-                <a href="#">Animation</a>
-                <a href="#">Apps</a>
-                <a href="#">CSS</a>
-                <a href="#">Design</a>
-                <a href="#">Design Patterns</a>
-                <a href="#">Design Systems</a>
-                <a href="#">E-Commerce</a>
-                <a href="#">Freebies</a>
-                <a href="#">Graphics</a>
-                <a href="#">HTML</a>
-                <a href="#">Illustrator</a>
-                <a href="#">Inspiration</a>
-                <a href="#">iOS</a>
-                <a href="#">JavaScript</a>
-                <a href="#">Mobile</a>
-                <a href="#">Pattern Libraries</a>
-                <a href="#">Performance</a>
-                <a href="#">Photoshop</a>
-                <a href="#">Plugins</a>
-                <a href="#">React</a>
-                <a href="#">Responsive Web Design</a>
-                <a href="#">Service Workers</a>
-                <a href="#">Sketch</a>
-                <a href="#">Typography</a>
-                <a href="#">UI</a>
-                <a href="#">Usability</a>
-                <a href="#">User Experience</a>
-                <a href="#">Wallepapers</a>
-                <a href="#">Web Design</a>
-                <a href="#">WordPress</a>
-                <a href="#">Workflow</a>
-            </div>
+                <div class="div-ul">
+                    <div class="div-li">
+                        <i class="fas fa-circle"></i>
+                        <a href="#">Accessiblity</a>
+                    </div>
+                    <div class="div-li">
+                        <i class="fas fa-circle"></i>
+                        <a href="#">Android</a>
+                    </div>
+                    <div class="div-li">
+                        <i class="fas fa-circle"></i>
+                        <a href="#">Animation</a>
+                    </div>
+                    <div class="div-li">
+                        <i class="fas fa-circle"></i>
+                        <a href="#">Apps</a>
+                    </div>
+                    <div class="div-li">
+                        <i class="fas fa-circle"></i>
+                        <a href="#">CSS</a>
+                    </div>
+                    <div class="div-li">
+                        <i class="fas fa-circle"></i>
+                        <a href="#">Design</a>
+                    </div>
+                    <div class="div-li">
+                        <i class="fas fa-circle"></i>
+                        <a href="#">design Patterns</a>
+                    </div>
+                    <div class="div-li">
+                        <i class="fas fa-circle"></i>
+                        <a href="#">Design System</a>
+                    </div>
+                    <div class="div-li">
+                        <i class="fas fa-circle"></i>
+                        <a href="#">E-Commerce</a>
+                    </div>
+                    <div class="div-li">
+                        <i class="fas fa-circle"></i>
+                        <a href="#">Freebies</a>
+                    </div>
+                    <div class="div-li">
+                        <i class="fas fa-circle"></i>
+                        <a href="#">Graphics</a>
+                    </div>
+                    <div class="div-li">
+                        <i class="fas fa-circle"></i>
+                        <a href="#">HTML</a>
+                    </div>
+                    <div class="div-li">
+                        <i class="fas fa-circle"></i>
+                        <a href="#">Illusianator</a>
+                    </div>
+                    <div class="div-li">
+                        <i class="fas fa-circle"></i>
+                        <a href="#">Insperation</a>
+                    </div>
+                    <div class="div-li">
+                        <i class="fas fa-circle"></i>
+                        <a href="#">iOS</a>
+                    </div>
+                    <div class="div-li">
+                        <i class="fas fa-circle"></i>
+                        <a href="#">JavaScript</a>
+                    </div>
+                    <div class="div-li">
+                        <i class="fas fa-circle"></i>
+                        <a href="#">Mobile</a>
+                    </div>
+                    <div class="div-li">
+                        <i class="fas fa-circle"></i>
+                        <a href="#">Patterns Libraries</a>
+                    </div>
+                    <div class="div-li">
+                        <i class="fas fa-circle"></i>
+                        <a href="#">Performance</a>
+                    </div>
+                    <div class="div-li">
+                        <i class="fas fa-circle"></i>
+                        <a href="#">Photoshop</a>
+                    </div>
+                    <div class="div-li">
+                        <i class="fas fa-circle"></i>
+                        <a href="#">Plugins</a>
+                    </div>
+                    <div class="div-li">
+                        <i class="fas fa-circle"></i>
+                        <a href="#">React</a>
+                    </div>
+                    <div class="div-li">
+                        <i class="fas fa-circle"></i>
+                        <a href="#">Responsive Web Design</a>
+                    </div>
+                    <div class="div-li">
+                        <i class="fas fa-circle"></i>
+                        <a href="#">Service Workers</a>
+                    </div>
+                    <div class="div-li">
+                        <i class="fas fa-circle"></i>
+                        <a href="#">Sketch</a>
+                    </div>
+                    <div class="div-li">
+                        <i class="fas fa-circle"></i>
+                        <a href="#">Typography</a>
+                    </div>
+                    <div class="div-li">
+                        <i class="fas fa-circle"></i>
+                        <a href="#">UI</a>
+                    </div>
+                    <div class="div-li">
+                        <i class="fas fa-circle"></i>
+                        <a href="#">Usability</a>
+                    </div>
+                    <div class="div-li">
+                        <i class="fas fa-circle"></i>
+                        <a href="#">User Experience</a>
+                    </div>
+                    <div class="div-li">
+                        <i class="fas fa-circle"></i>
+                        <a href="#">Wallpapers</a>
+                    </div>
+                    <div class="div-li">
+                        <i class="fas fa-circle"></i>
+                        <a href="#">Web Design</a>
+                    </div>
+                    <div class="div-li">
+                        <i class="fas fa-circle"></i>
+                        <a href="#">WordPress</a>
+                    </div>
+                    <div class="div-li">
+                        <i class="fas fa-circle"></i>
+                        <a href="#">Workflow</a>
+                    </div>
+                </div>
             <div class="foot3">
                 With a commitment to quality content for the design community.
                 Founded by Vitaly Friedman and Sven Lennartz. 2006–2020.
@@ -663,4 +767,3 @@
 </body>
 
 </html>
-
